--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 services:
   x-core.public.dappnode.eth:
-    build: ./build0
+    build: ./build
     restart: always
     volumes:
       - '/home/$USER/.xcore:/root/.xcore'
