--- a/releases.json
+++ b/releases.json
@@ -1,9 +1,9 @@
 {
   "1.0.0": {
-    "hash": "/ipfs/QmRPmuEouAwg1JVUUxbq7oqVAV9j1sS55jpL56t6NiJ2n2",
-    "type": "manifest",
+    "hash": "/ipfs/Qmc5vxuAbpYsuwhrmCp6XLpqMNxtTuS3rzD6BeNXJuXniz",
+    "type": "directory",
     "uploadedTo": {
-      "dappnode": "Sat, 28 Mar 2020 17:55:41 GMT"
+      "dappnode": "Wed, 15 Apr 2020 21:44:35 GMT"
     },
     "link": "http://my.dappnode/#/sdk/publish/r=x-core.public.dappnode.eth&v=1.0.0&h=%2Fipfs%2FQmRPmuEouAwg1JVUUxbq7oqVAV9j1sS55jpL56t6NiJ2n2&d=0x9913a09B9bAdcA3381DeE4F6Ef5E43CAa25D66e6"
   }
